src/objects/Recruiting_Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Source_Category__c</fullName>
        <formula>IF(TEXT(Candidate_Source__c)=&quot;LinkedIn Recruiter&quot;,&quot;(b) Sourcing&quot;,
CASE(LEFT(TEXT(Candidate_Source__c),4),
&quot;RFL:&quot;,&quot;(a) Referral&quot;,
&quot;INB:&quot;,&quot;(b) Inbound&quot;,
&quot;SRC:&quot;,&quot;(c) Sourcing&quot;,
&quot;JBD:&quot;,&quot;(d) Job Board&quot;,
&quot;EVT:&quot;,&quot;(h) Event&quot;,
&quot;CLG:&quot;,&quot;(e) College Recruiting&quot;,
&quot;HDH:&quot;,&quot;(f) Headhunter&quot;,
&quot;OTH:&quot;,&quot;(g) Other&quot;,
&quot;N/A&quot;))</formula>
        <label>Source Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourced_By__c</fullName>
        <inlineHelpText>Only required for sourced candidates (e.g., not required for candidates from job boards)</inlineHelpText>
        <label>Sourcer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brigid Doulin</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                </value>
                <value>
                    <fullName>Andrew Lane</fullName>
                </value>
                <value>
                    <fullName>Adam Pasti</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                </value>
                <value>
                    <fullName>Megan Griffin</fullName>
                </value>
                <value>
                    <fullName>Michelle Tuzio</fullName>
                </value>
                <value>
                    <fullName>Rachel Murray</fullName>
                </value>
                <value>
                    <fullName>Veronica Curran</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specify_Role_if_Other__c</fullName>
        <label>Specify Role if Other</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify_Source_If_Other__c</fullName>
        <label>Referred By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Quarter__c</fullName>
        <formula>IF(AND(MONTH( Start_Date__c )&gt;=1,MONTH( Start_Date__c )&lt;4),1,
IF(AND(MONTH( Start_Date__c )&gt;3,MONTH( Start_Date__c )&lt;7),2,
IF(AND(MONTH( Start_Date__c )&gt;6,MONTH( Start_Date__c )&lt;10),3,
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_From_iCIMS__c</fullName>
        <label>Status (From iCIMS)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Applicant Submitted</fullName>
                    <default>true</default>
                    <label>1 - Applicant Submitted</label>
                </value>
                <value>
                    <fullName>2 - Initial Outreach Completed</fullName>
                </value>
                <value>
                    <fullName>3 - Screen 1 Completed</fullName>
                </value>
                <value>
                    <fullName>3a - R&amp;D Test Administered</fullName>
                </value>
                <value>
                    <fullName>3b - Screen 2 Completed</fullName>
                </value>
                <value>
                    <fullName>4 - Onsite Interview 1 Completed</fullName>
                </value>
                <value>
                    <fullName>5 - Onsite Interview 2 Completed</fullName>
                </value>
                <value>
                    <fullName>6 - Offer Extended</fullName>
                </value>
                <value>
                    <fullName>7 - Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Did Not Pass - VMT Rejected</fullName>
                </value>
                <value>
                    <fullName>Did Not Pass - Candidate Withdrew</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_End_Date__c</fullName>
        <label>Visa End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Status__c</fullName>
        <label>Visa Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Has Visa – H1B</fullName>
                </value>
                <value>
                    <fullName>Has Visa – OPT</fullName>
                </value>
                <value>
                    <fullName>Has Visa – Other</fullName>
                </value>
                <value>
                    <fullName>No Visa – US Citizen</fullName>
                </value>
                <value>
                    <fullName>No Visa – Perm Resident</fullName>
                </value>
                <value>
                    <fullName>No Visa – Non US Hire</fullName>
                </value>
                <value>
                    <fullName>No Visa – Other</fullName>
                </value>
                <value>
                    <fullName>Does not have visa</fullName>
                    <isActive>false</isActive>
                    <label>Does not have visa</label>
                </value>
                <value>
                    <fullName>Has visa</fullName>
                    <isActive>false</isActive>
                    <label>Has visa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Office__c</fullName>
        <label>Working Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Home (other)</fullName>
                </value>
                <value>
                    <fullName>White Plains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recruiting Candidate</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiting Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_edit_created_date_manual</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Created_Date_Manual__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Created_Date_Manual__c</errorDisplayField>
        <errorMessage>You need admin permissions to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_records_must_have_open_status</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNEW(),NOT(ISNUMBER(LEFT(TEXT(Status__c),1))))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please select a status starting with a number for new records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Contact_Info_for_New_Hires</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
TEXT(Status__c)=&quot;7 - Offer Accepted&quot;,
OR(
ISBLANK(Home_Address_City__c),
TEXT(Home_Address_State__c)=&quot;&quot;,
ISBLANK(Home_Address_Zip__c),
ISBLANK(Home_Address_Street__c),
ISBLANK(Phone__c),
ISBLANK(Email__c),
ISBLANK(Start_Date__c)),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>You must fill in home address information, phone, email and start date in order to put a candidate in &quot;Offer Accepted&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Home_Address_State</fullName>
        <active>true</active>
        <description>Require the Home Address State for Recruiting Candidates</description>
        <errorConditionFormula>ISPICKVAL(Home_Address_State__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Home_Address_State__c</errorDisplayField>
        <errorMessage>Home Address (State) is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Offer_Accepted_On</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT(Status__c)=&quot;7 - Offer Accepted&quot;,
OR(ISBLANK(Offer_Accepted_On__c),
ISBLANK(Start_Date__c),
ISBLANK(Email__c),
ISBLANK(Phone__c)), 
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>You must fill out the Offer Accepted On date, Email and Primary Phone if status is now &quot;Offer Accepted&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Office_Location</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISCHANGED(Status__c), 
TEXT(Status__c)=&quot;7 - Offer Accepted&quot;, 
OR( 
TEXT( Working_Office__c )=&quot;&quot;), 
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>You must enter the new hire&apos;s office location if status is &quot;Offer Accepted.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Recruiting_Org</fullName>
        <active>false</active>
        <description>Require recruiting org if status is offer accepted</description>
        <errorConditionFormula>AND( 
ISCHANGED(Status__c), 
TEXT(Status__c)=&quot;7 - Offer Accepted&quot;, 
OR( Recruiting_Organization__c =&quot;&quot;), 
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>Please fill in a recruiting org for this candidate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Resume_to_be_Attached</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Resume_Attached__c=FALSE, 
OR(ISCHANGED(Status__c),ISNEW()),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Resume_Attached__c</errorDisplayField>
        <errorMessage>Please attach a resume to this candidate and check the Resume Attached checkbox</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Sourced_By_field_for_SRC_RC</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
TEXT(Candidate_Source__c)=&quot;SRC: LinkedIn (Sourced)&quot;,
TEXT(Sourced_By__c)=&quot;&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Sourced_By__c</errorDisplayField>
        <errorMessage>Please fill in the Sourced By person if this Candidate was sourced through LinkedIn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Visa_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),TEXT(Visa_Status__c)=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Visa_Status__c</errorDisplayField>
        <errorMessage>Please provide a visa status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_offer_extended_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
CONTAINS(TEXT(Status__c),&quot;Offer Extend&quot;),
ISBLANK(Offer_Extended_On__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Offer_Extended_On__c</errorDisplayField>
        <errorMessage>Please specify when the offer was extended</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_onsite_interview_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
CONTAINS(TEXT(Status__c),&quot;Onsite Interview Complete&quot;),
ISBLANK(Onsite_Interview_Completed_On__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Onsite_Interview_Completed_On__c</errorDisplayField>
        <errorMessage>Please specify when the onsite interview took place</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_reason_candidate_withdrew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status__c),
CONTAINS(TEXT(Status__c),&quot;Candidate Withdrew&quot;),
NOT(CONTAINS(Highest_Status_Reached__c,&quot;Applicant Submitted&quot;)),
NOT(CONTAINS(Highest_Status_Reached__c,&quot;Outreach Completed&quot;)),
ISBLANK(Reason_Candidate_Withdrew__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Reason_Candidate_Withdrew__c</errorDisplayField>
        <errorMessage>Please specify why the candidate withdrew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_screen_2_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(Status__c), 
CONTAINS(TEXT(Status__c),&quot;Screen 2 Complete&quot;), 
ISBLANK(Screen_2_Completed_On__c), 
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>Please specify when screen 2 took place</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_screen_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
CONTAINS(TEXT(Status__c),&quot;Phone Screen Complete&quot;),
ISBLANK(Screen_Completed_On__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Screen_Completed_On__c</errorDisplayField>
        <errorMessage>Please specify when the screen took place</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_sourced_by</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
LEFT(TEXT(Candidate_Source__c),4)=&quot;SRC:&quot;,
TEXT(Sourced_By__c)=&quot;&quot;, 
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Sourced_By__c</errorDisplayField>
        <errorMessage>Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_specify_role</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Role_Interviewed_For__c)=&quot;Other&quot;,
ISBLANK(Specify_Role_if_Other__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Specify_Role_if_Other__c</errorDisplayField>
        <errorMessage>You selected &quot;Other&quot;, so please specify the role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_specify_source</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(CONTAINS(TEXT(Candidate_Source__c),&quot;RFL:&quot;),
CONTAINS(TEXT(Candidate_Source__c),&quot;HDH:&quot;)),
ISBLANK(Specify_Source_If_Other__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Specify_Source_If_Other__c</errorDisplayField>
        <errorMessage>Please specify who referred the candidate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
CONTAINS(TEXT(Status__c),&quot;Offer Accepted&quot;),
ISBLANK(Start_Date__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_role_field_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Role_Interviewed_For__c)&lt;&gt;&quot;Other&quot;,
NOT(ISBLANK(Specify_Role_if_Other__c)),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Specify_Role_if_Other__c</errorDisplayField>
        <errorMessage>&quot;Other&quot; is not selected as the role interviewed for, so please clear this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_source_field_should_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(TEXT(Candidate_Source__c)&lt;&gt;&quot;OTH: Other&quot;,
NOT(ISBLANK(Specify_Source_If_Other__c)),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Specify_Source_If_Other__c</errorDisplayField>
        <errorMessage>&quot;OTH: Other&quot; is not selected as the candidate source, so please clear this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Track_SEs_in_sales_BU</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(CONTAINS(Role__c,&quot;Sales Engineer&quot;),Role__c=&quot;SE&quot;),
TEXT(Business_Unit__c)&lt;&gt;&quot;Sales&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Business_Unit__c</errorDisplayField>
        <errorMessage>Sales Engineers should be tracked in the Sales business unit (not Engineering)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visa_End_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CONTAINS(TEXT(Visa_Status__c),&quot;Has Visa&quot;),
ISBLANK(Visa_End_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Visa_End_Date__c</errorDisplayField>
        <errorMessage>A Visa End Date is Required for Candidates with a Visa Status containing &quot;Has Visa&quot;.

Either input a Visa End Date or Select a different Visa Status.</errorMessage>
    </validationRules>
</CustomObject>